--- a/public/about.html
+++ b/public/about.html
@@ -6,9 +6,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
@@ -50,7 +50,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="#"><img class="img" src="images/logo.png" alt=""></a></h1>
+							<h1><a href="#"><img class="img" src="images/logo.jpg" alt="" style="height: 74px;"></a></h1>
 						</div>
 
 					<!-- Nav -->
@@ -92,7 +92,7 @@
                         <span style="font-size:22px; text-align:left;" class="color-text-green">“Lets go green to get our globe clean”</span>
 					</header>
 				</section>
-                <p style="text-align:justify; display:block">Integrated Enviroclean Systems and Solutions Pvt. Ltd (ATE) is a company providing effective and total solutions for meeting the environment concerns of Clients in industrial, Commercial and Government sectors. ATE Pvt Ltd  is a group company of IDS JLT, UAE. </p>
+                <p style="text-align:justify; display:block">Aqua Techsole Establishment (ATE) is a company providing effective and total solutions for meeting the environment concerns of Clients in industrial, Commercial and Government sectors. ATE Pvt Ltd  is a group company of IDS JLT, UAE. </p>
                 <h3>The Company: </h3>
 
                 <div class="abt-left">
