--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
@@ -50,7 +50,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="#"><img class="img" src="images/logo.png" alt=""></a></h1>
+							<h1><a href="#"><img class="img" src="images/logo.jpg" alt="" style="height: 74px;"></a></h1>
 						</div>
 
 					<!-- Nav -->
@@ -95,7 +95,7 @@
                         <span class="color-text-green">“Lets go green to get our globe clean”</span>
 					</header>
 				</section>
-                <p style="text-align:justify; display:block">Integrated Enviroclean Systems and Solutions Pvt. Ltd (ATE) is a company providing effective and total solutions for meeting the environment concerns of Clients in industrial, Commercial and Government sectors. ATE Pvt Ltd  is a group company of IDS JLT, UAE. ATE Pvt Ltd is a Company incorporated in India and is promoted by Scientists, Technocrats and Experts having vast experience in the environment sector.  ATE aims to be a reliable and competent Technology and Service Provider for environmental solutions in the Asian, GCC and African region. </p>
+                <p style="text-align:justify; display:block">Aqua Techsole Establishment (ATE) is a company providing effective and total solutions for meeting the environment concerns of Clients in industrial, Commercial and Government sectors. ATE Pvt Ltd  is a group company of IDS JLT, UAE. ATE Pvt Ltd is a Company incorporated in India and is promoted by Scientists, Technocrats and Experts having vast experience in the environment sector.  ATE aims to be a reliable and competent Technology and Service Provider for environmental solutions in the Asian, GCC and African region. </p>
                 <a href="about.html" class="button  small">Readmore</a>
 
 
@@ -114,7 +114,7 @@
 						</header>
 						<span class="fa fa-magic color-text-white"></span>
                         <h2 class="color-text-white">Lets go green </h2>
-						<p class="color-text-white">Integrated Enviroclean Systems and Solutions Pvt. Ltd (ATE) is a company providing effective and total solutions for meeting </p>
+						<p class="color-text-white">Aqua Techsole Establishment (ATE) is a company providing effective and total solutions for meeting </p>
 					</section>
 					<section class="3u">
 						<header>
