--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    
     <title>Page Not Found</title>
 
     <style media="screen">
