--- a/public/about.html
+++ b/public/about.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -92,7 +94,7 @@
                         <span style="font-size:22px; text-align:left;" class="color-text-green">“Lets go green to get our globe clean”</span>
 					</header>
 				</section>
-                <p style="text-align:justify; display:block">Aqua Techsole Establishment (ATE) is a company providing effective and total solutions for meeting the environment concerns of Clients in industrial, Commercial and Government sectors. ATE Pvt Ltd  is a group company of IDS JLT, UAE. </p>
+                <p style="text-align:justify; display:block">Aqua Techsole Establishment (ATE) is a company providing effective and total solutions for meeting the environment concerns of Clients in industrial, Commercial and Government sectors.</p>
                 <h3>The Company: </h3>
 
                 <div class="abt-left">
